...
                    ModifierOption("Poco", -10, appliesTo = ModifierTarget.CarbsPerGram),
                    ModifierOption("Tanto", -20, appliesTo = ModifierTarget.CarbsPerGram)
                )
            )
        )
    ),
    FoodItem("Pane", Course.PASTO, 50, 50),
    FoodItem("Patate", Course.PASTO, 20, 150),
    FoodItem("Patatine Fritte", Course.PASTO, 30, 150),
    FoodItem("Pizza", Course.PASTO, 50, 300),
    FoodItem(
        name = "Gelato da Banco",
        course = Course.MERENDA,
...
