...

    fun addManualMealItem() {
        if (!isManualInputValid) return

        mealItems.add(
            MealItem(
                name = "Manuale",
                weight = weightValue,
                totalCHO = manualTotalCho
            )
        )
        weightInput = ""
        carbsInput = ""
...
